gcc/testsuite/rust/rustc/ui/binop/binop-logic-int.rs
fn main() { let x = 1 && 2; }
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }

